# pybind11-cmake

./: CMakeLists.txt  README.md
src/: ConvexHullOperation.cpp  ConvexHullOperation.h  ExplicitRec.cpp  ExplicitRec.h  GHPR.cpp  GHPR.h  MeshOperation.cpp  MeshOperation.h  MeshSample.cpp  MeshSample.h  SectorPartition.cpp  SectorPartition.h  gen_normal.cpp  gen_normal.h  main.cpp  myadd.cpp  myadd.h
